# JaDe2

./: CMakeLists.txt  README.md  main.py
include/: AudioProcessor.h  MainWindow.h
src/: AudioProcessor.cpp  MainWindow.cpp  main.cpp
